# TRIDENT-AI

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TRIDENT_AI_BUILD_BRIEF.md  arch.mmd  main.py  pyproject.toml  requirements.txt  setup.cfg  test_proxy.py  test_splunk.py
dashboards/: audit_security.json  trident_main.json
demo/: generate_metrics.py  simulate_incident.py
demo/sample_data/: metrics.json  platform_data.json
docs/: arch.mmd  architecture.md  criteria.md  demo_script.md  judging_criteria.md  setup.md
docs/proof/: 04_real_mcp_predict_execution.json
frontend/: package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.jsx
frontend/src/hooks/: useApproval.js  (+3 more)
scripts/: test_mcp_list.py  test_mcp_proxy.py  test_mcp_query.py  verify_splunk_connection.py
splunk_app/: app.conf
splunk_app/default/: indexes.conf  inputs.conf  props.conf  savedsearches.conf  transforms.conf
src/: __init__.py
src/agents/: __init__.py  base_agent.py  platform_auditor.py  telemetry_sentinel.py  threat_marshall.py
src/coordinator/: __init__.py  autonomous_loop.py  bedrock_client.py  incident_package.py  state_manager.py
src/models/: __init__.py  agent_finding.py  incident.py  remediation.py
src/splunk/: __init__.py  hosted_models.py  mcp_client.py  search_client.py  token_auth.py
src/utils/: __init__.py  config.py  logger.py  mitre.py
tests/: conftest.py  test_autonomous_loop.py  test_bedrock_synthesis.py  test_cdtsm_agent.py  test_foundation_ai.py  test_incident_package.py  test_mcp_client.py
(+16 files in other folders)
