[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trident-ai"
version = "1.0.0"
description = "Autonomous AI-powered incident intelligence using CDTSM, Foundation AI Security Model, and Splunk MCP Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "TRIDENT-AI Team"}
]
dependencies = [
    "splunk-sdk>=2.0.1",
    "boto3>=1.34.0",
    "httpx[http2]>=0.27.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require live Splunk connection",
    "slow: marks tests that take more than 5 seconds",
]

[tool.ruff]
target-version = "py311"
line-length = 100
