[metadata]
name = trident-ai
version = 1.0.0
description = Autonomous AI-powered incident intelligence
author = TRIDENT-AI Team
license = MIT

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.11

[options.packages.find]
where = .

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,node_modules,.venv

[tool:pytest]
testpaths = tests
asyncio_mode = auto
